--- a/flexbrasil.air_explorer/src/testes/ProcessTeste.mxml
+++ b/flexbrasil.air_explorer/src/testes/ProcessTeste.mxml
@@ -6,6 +6,7 @@
 		  width="100%" height="100%" paddingBottom="8" paddingLeft="8" paddingRight="8" paddingTop="8">
 	<fx:Script>
 		<![CDATA[
+			import flexbrasil.air.nativeProcessUtil.Monitor;
 			private function run():void
 			{
 				try {
@@ -21,6 +22,7 @@
 								   defaultArgs="{defaultArgs.text.split(/\s+/)}"
 								   args="{args.text.split(/\s+/)}" />
 	</fx:Declarations>
+
 	<s:HGroup width="100%">
 		<mx:Form width="100%" paddingTop="0">
 			<mx:FormItem label="workingDir:" width="100%">
